# snake

./: README.md
C/: .gitignore  CMakeLists.txt  main.c
C++/: CMakeLists.txt  main.cpp
C++/include/: console_graphics.h  graphics.h  key_press.h  snake_game.h
C++/src/: console_graphics.cpp  key_press.cpp  snake_game.cpp
C/include/: draw.h  platform.h  snake.h
C/src/: draw.c  platform.c  snake.c
Go/: input.go  main.go  snake.go  ui.go
NodeJS/: package-lock.json  package.json
NodeJS/src/: Snake.js  index.js
Python/: main.py  requirements.txt
Python/models/: snake.py
Python/src/: main.py
Python/ui/: cli.py
